// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DarkMode shows Moon icon on light mode 1`] = `
<div>
  <button
    aria-label="toggleDarkMode"
    data-testid="moon"
  >
    <svg
      class="h-8 w-8 text-gh-dark"
      fill="none"
      role="img"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"
      />
    </svg>
  </button>
</div>
`;

exports[`DarkMode shows Sun icon on dark mode 1`] = `
<div>
  <button
    aria-label="toggleDarkMode"
    data-testid="sun"
  >
    <svg
      class="h-8 w-8 text-slate-300"
      fill="none"
      role="img"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <circle
        cx="12"
        cy="12"
        r="5"
      />
      <path
        d="M12 1L12 3"
      />
      <path
        d="M12 21L12 23"
      />
      <path
        d="M4.22 4.22L5.64 5.64"
      />
      <path
        d="M18.36 18.36L19.78 19.78"
      />
      <path
        d="M1 12L3 12"
      />
      <path
        d="M21 12L23 12"
      />
      <path
        d="M4.22 19.78L5.64 18.36"
      />
      <path
        d="M18.36 5.64L19.78 4.22"
      />
    </svg>
  </button>
</div>
`;
